--- a/webapp/templates/articles.html
+++ b/webapp/templates/articles.html
@@ -1,56 +1,33 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "wrapper.html" %}
 
+{% block body %}
+<h1>NewsSpectrum <img src="static/myspectrum.png" /></h1>
+<h2><span class="topic-title-text">Topic: <span class="topic-title">{{ topic }}</span></span></h2>
 
-    <title>NewsSpectrum</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/dist/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/starter-template.css" rel="stylesheet">
-
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-
-	<h1>NewsSpectrum <img src="static/myspectrum.png" /></h1>
-	<h2><span class="topic-title-text">Topic: <span class="topic-title">{{ topic }}</span></span></h2>
-
-    <div class="browse-column col-md-2">
-	<table class="table table-hover">
-        <tr><th>Level</th><th>Source</th></tr>
+<div class="browse-column col-md-2">
+  <table class="table table-hover">
+    <tr><th>Level</th><th>Source</th></tr>
     {% for article in articles %}
     <tr><td>{{ article['grade_level'] }}</td><td><a id="article-link-{{ article['i'] }}" class="article-link" href="{{ article['url'] }}">{{ article['domain'] }}</a></td></tr>
     {% endfor %}
-    </table>
-	</div>
-	<div class="article-box col-md-10">
-    {% for article in articles %}
-      <div class="article" id="article-{{ article['i'] }}">
-		<div class="source-ref">
-		  Source: <a href="{{ article['url'] }}">{{ article['url'] }}</a>
-        </div>
-        <h3> <span class="article-title">{{ article['title'] }}</span></h3>
-		<div class="article-body">
-          {{ article['body'] }}
-        </div>
-      </div>
-    {% endfor %}
-	<!-- <iframe class="article-frame" width="1100px" height="80%" src="http://www.theregister.co.uk/2014/01/21/milky_way_inside_out/" /> -->
-	</div>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="static/dist/js/bootstrap.min.js"></script>
+  </table>
+</div>
+<div class="article-box col-md-10">
+  {% for article in articles %}
+  <div class="article" id="article-{{ article['i'] }}">
+	<div class="source-ref">
+	  Source: <a href="{{ article['url'] }}">{{ article['url'] }}</a>
+    </div>
+    <h3> <span class="article-title">{{ article['title'] }}</span></h3>
+	<div class="article-body">
+      {{ article['body'] }}
+    </div>
+  </div>
+  {% endfor %}
+  <!-- <iframe class="article-frame" width="1100px" height="80%" src="http://www.theregister.co.uk/2014/01/21/milky_way_inside_out/" /> -->
+</div>
+{% endblock %}
+
+{% block js %}
     <script src="static/articles.js"></script>
-</body>
-</html>
+{% endblock %}
