--- a/webapp/templates/articles.html
+++ b/webapp/templates/articles.html
@@ -6,9 +6,9 @@
 
 <div class="browse-column col-md-2">
   <table class="table table-hover">
-    <tr><th>Level</th><th>Source</th></tr>
+    <tr><th class="grade-level">Level</th><th>Source</th></tr>
     {% for article in articles %}
-    <tr><td>{{ article['grade_level'] }}</td><td><a id="article-link-{{ article['i'] }}" class="article-link" href="{{ article['url'] }}">{{ article['domain'] }}</a></td></tr>
+    <tr><td class="grade-level">{{ article['grade_level'] }}</td><td><a id="article-link-{{ article['i'] }}" class="article-link" href="{{ article['url'] }}">{{ article['domain'] }}</a></td></tr>
     {% endfor %}
   </table>
 </div>
