--- a/webapp/templates/articles.html
+++ b/webapp/templates/articles.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 <h1>News Spectrum <img src="static/myspectrum.png" /></h1>
-<h2><span class="topic-title-text">Topic: <span class="topic-title">{{ topic }}</span></span></h2>
 
-<div class="browse-column col-md-2">
+<div class="browse-column col-md-3">
+  <h2><span class="topic-title-text"><span class="topic-title">{{ topic }}</span></span></h2>
   <table class="table table-hover">
     <tr><th class="grade-level">Level</th><th>Source</th></tr>
     {% for article in articles %}
@@ -12,9 +12,10 @@
     {% endfor %}
   </table>
 </div>
-<div class="article-box col-md-10">
+<div class="article-box col-md-8">
   {% for article in articles %}
   <div class="article" id="article-{{ article['i'] }}">
+	<h4><span class="article-publisher">{{ article['domain'] }}</span></h4>
 	<div class="source-ref">
 	  Source: <a href="{{ article['url'] }}">{{ article['url'] }}</a>
     </div>
