--- a/webapp/templates/wrapper.html
+++ b/webapp/templates/wrapper.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Find news articles on the same topic and present them in a spectrum of sophistication">
+    <meta name="author" content="Alan Wilson">
 
 
     <title>News Spectrum</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="static/dist/css/bootstrap.css" rel="stylesheet">
+    <!-- <link href="static/dist/css/bootstrap.css" rel="stylesheet"> -->
+    <link href="static/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/starter-template.css" rel="stylesheet">
