--- a/webapp/templates/landing.html
+++ b/webapp/templates/landing.html
@@ -3,6 +3,30 @@
 {% block body %}
 <div class="landing">
 
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="/" class="navbar-brand">News Spectrum</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Examples <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="examples">
+                <li><a tabindex="-1" href="/articles?url=http%3A//www.nbcnews.com/business/worst-performing-most-minicars-fail-new-frontal-crash-test-2D11968197">Small car crashes</a></li>
+                <!-- <li class="divider"></li> -->
+              </ul>
+            </li>
+            <li><a href="/about">About</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   <!--
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -33,12 +57,12 @@
       <h1>News Spectrum</h1>
 	  <img class="banner-spectrum" src="static/myspectrum.png" width="857" height="40" /> <!-- actual height is 83px -->
       <p class="lead">Given a current news article on technology, health, or science<br/>
-		find others on the same topic presented more simply or with more sophistication.</p>
+		find a spectrum of others on the same topic.</p>
       <form class="form-inline" role="form">
         <div class="form-group">
           <input type="url" class="form-control" id="inputURL" placeholder="Enter an article URL" size="100">
         </div>
-        <button type="submit" class="btn btn-warning btn-lg">Go</button>
+        <button type="submit" class="btn btn-primary btn-lg">Go</button>
       </form>                                 
     </div>
 
