--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find news articles on the same topic and present them in a spectrum of sophistication">
     <meta name="author" content="Alan Wilson">
+    {% block head %}{% endblock %}
 
-
-    <title>News Spectrum</title>
+    <title>News Spectra</title>
 
     <!-- Bootstrap core CSS -->
     <!-- <link href="static/dist/css/bootstrap.css" rel="stylesheet"> -->
