--- a/static/starter-template.css
+++ b/static/starter-template.css
@@ -14,6 +14,8 @@ body {
 img.banner-spectrum {
 	margin-top:    2em;
 	margin-bottom: 2em;
+	width: 80%;
+	height: 35px;
 }
 
 .starter-template {
@@ -53,4 +55,13 @@ h1 > img {
 .article-publisher {
 	/* font-size: 150%; */
 	font-style: italic;
+}
+
+.spectrum-marker {
+    fill:         #2d578b;
+    stroke:       white;
+    stroke-width: 2;
+}
+.spectrum-marker:hover {
+    fill: red;
 }
