--- a/templates/articles.html
+++ b/templates/articles.html
@@ -4,7 +4,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand">News Spectrum</a>
+          <a href="/" class="navbar-brand">News Spectra</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -36,19 +36,23 @@
         <div class="row">
           <div class="col-lg-12">
 			<!--
-			<h1>News Spectrum <img src="static/myspectrum.png" /></h1>
+			<h1>News Spectra <img src="static/myspectrum.png" /></h1>
 			-->
             <!-- Nav tabs -->
+	    <svg class="spectrum"></svg>
+<!--
             <ul class="nav nav-tabs">
               {% for article in articles %}
               <li><a href="#article-{{ article['i'] }}" data-toggle="tab"><span class="grade-level">{{ article['grade_level'] }}</span> <br/> {{ article['domain'] }}</a></li>
               {% endfor %}
+-->
             </ul>
           </div>
         </div>
       </div>
 
       <!-- Tab panes -->
+<!--
 	  <div class="tab-content">
 		{% for article in articles %}
 		<div class="tab-pane active" id="article-{{ article['i'] }}">
@@ -64,11 +68,123 @@
 		</div>
 		{% endfor %}
 	  </div>
+-->
+    </div>
 
-	</div>
-<!-- <iframe class="article-frame" width="1100px" height="80%" src="http://www.theregister.co.uk/2014/01/21/milky_way_inside_out/" /> -->
+
+<iframe class="article-frame" id="ifm" width="100%" height="800px" src="{{ current_url }}">
+</iframe>
+
+
 {% endblock %}
 
 {% block js %}
     <script src="static/articles.js"></script>
+    <script src="static/d3.v3.min.js"></script>
+
+<script>
+
+var margin = {top: 20, right: 20, bottom: 20, left: 20},
+    width = 960 - margin.left - margin.right,
+    height = 100 - margin.top - margin.bottom;
+
+var svg = d3.select("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+svg.append("image")
+    .attr("xlink:href", "static/myspectrum.png")
+    .attr("x", 0)
+    .attr("y", margin.top)
+    .attr("preserveAspectRatio", "none")
+    .attr("width", width)
+    .attr("height", height);
+
+var x = d3.scale.linear()
+    .range([0, width])
+    .domain([4, 24]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("top")
+    .ticks(10);
+
+svg.append("g")
+    .attr("class", "x axis")
+    .attr("transform", "translate(0,25)")
+    .call(xAxis)
+  //.append("text")
+  //  .attr("x", 450)
+  //  .attr("y", -30)
+  //  .attr("dy", ".71em")
+  //  .style("text-anchor", "end")
+  //  .text("Flesch-Kincaid grade level");
+
+var labels = svg.append("g")
+    .attr("transform", "translate(0," + (height + margin.top) + ")")
+labels.append("text")
+   .attr("x", x(8))
+   .attr("dx", "-10em")
+   .attr("dy", "1em")
+   .text("<-- lower reading level")
+labels.append("text")
+   .attr("x", x(20))
+   .attr("dy", "1em")
+   .text("higher reading level -->")
+ 
+d3.json("{{ json_url }}", function(error, data) {
+    //x.domain([d3.max(data.articles, function(d) { return d.grade_level; }),
+    //          d3.min(data.articles, function(d) { return d.grade_level; })]);
+    //x.domain([24, 0])
+
+    svg.append("line")
+       .attr("x1", x(data.current_grade_level))
+       .attr("x2", x(data.current_grade_level))
+       .attr("y1", margin.top)
+       .attr("y2", height+margin.top)
+       .attr("stroke", "black")
+       .attr("stroke-width", 2)
+    svg.selectAll("circle")
+       .data(data.articles)
+       .enter()
+       .append("svg:circle")
+       .attr("class", "spectrum-marker")
+       .attr("cx", function(datum) { return x(datum.grade_level); })
+       .attr("cy", 40)
+       .attr("r", function(datum) { return Math.sqrt(datum.body.length/25); })
+       .attr("svg:title", function(datum) { return datum.domain; })
+       .each(function(datum) {
+           d3.select(this).on("click", function() { $("#ifm").attr("src", datum.url); })
+        });
+
+});
+
+// This is from http://stackoverflow.com/questions/325273/make-iframe-to-fit-100-of-containers-remaining-height
+var buffer = 20; //scroll bar buffer
+var iframe = document.getElementById('ifm');
+
+function pageY(elem) {
+    return elem.offsetParent ? (elem.offsetTop + pageY(elem.offsetParent)) : elem.offsetTop;
+}
+
+function resizeIframe() {
+    var height = document.documentElement.clientHeight;
+    height -= pageY(document.getElementById('ifm'))+ buffer ;
+    height = (height < 0) ? 0 : height;
+    document.getElementById('ifm').style.height = height + 'px';
+}
+
+// .onload doesn't work with IE8 and older.
+if (iframe.attachEvent) {
+    iframe.attachEvent("onload", resizeIframe);
+} else {
+    iframe.onload=resizeIframe;
+}
+
+window.onresize = resizeIframe;
+
+</script>
+
 {% endblock %}
