More improvements to spectrum: star indicates current, legend, indicates domain Also improve examples, removing the URL quoting (can actually do this in templates) Move javascript to a separate file Make /topics more informative

--- a/static/starter-template.css
+++ b/static/starter-template.css
@@ -57,11 +57,18 @@ h1 > img {
 	font-style: italic;
 }
 
-.spectrum-marker {
+.spectrum-marker, .spectrum-marker-current, .example-spectrum-marker, .example-spectrum-marker-current {
     fill:         #2d578b;
     stroke:       white;
-    stroke-width: 2;
+    stroke-width: .2;
 }
-.spectrum-marker:hover {
+.example-spectrum-marker, .example-spectrum-marker-current {
+    stroke:       black;
+}
+.spectrum-marker:hover, .spectrum-marker-current:hover {
     fill: red;
+}
+
+#banner {
+    margin-top: 65px;
 }
