--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Examples <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="examples">Examples <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="examples">
 		{% for example in examples %}
                 <li><a tabindex="-1" id="example-{{ loop.index }}" href="#">{{ example[1] }}</a></li>
