--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find news articles on the same topic and present them in a spectrum of sophistication">
     <meta name="author" content="Alan Wilson">
